# ColProc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig
components/color_processor/: CMakeLists.txt  bindings.cog  parse_classes.py  util.cpp
components/color_processor/canvas/: canvas.cpp  canvas_console.cpp  canvas_strip.cpp
components/color_processor/include/: colproc_defs.h
components/color_processor/include/colproc/: colproc.h  defs.h
components/color_processor/include/colproc/canvas/: canvas.h  canvas_console.h  canvas_pixmap.h  canvas_strip.h
components/color_processor/include/colproc/filter/: brigtness_scale.h  filter.h
components/color_processor/include/colproc/mod/: mixer.h  move.h
components/color_processor/include/colproc/switch/: transition.h  transition_simple.h
components/color_processor/include/colproc/util/: util.h
components/color_processor/include/colproc/variable/: variable.h  variable_callback.h  variable_constant.h
components/color_processor/lua/: CMakeLists.txt
components/colproc_runtime/: CMakeLists.txt  display_loop.cpp
components/colproc_runtime/include/: display_loop.h  variable_storage.h
components/esp32_mcufont/: CMakeLists.txt
components/esp32_mcufont/fonts/: 3-by-55.c  3-by-57.c  fonts.h
components/esp32_mcufont/mcufont/decoder/: mf_config.h  mf_kerning.c
components/esp32_mcufont/mcufont/examples/render_bmp/: buildlog.txt
components/led_strip/include/: led_strip.h
components/led_strip/src/: led_strip_rmt_ws2812.c
examples/const_variable_test/: CMakeLists.txt  main.cpp
examples/random_test/: CMakeLists.txt  main.cpp
examples/simple/: CMakeLists.txt  main.cpp
examples/simple_lua/: CMakeLists.txt  init.lua  main.cpp
examples/text_rendering_test/: CMakeLists.txt  main.cpp
examples/util/: console_canvas.h
include/colproc/: colproc.h
include/colproc/canvas/: canvas.h  canvas_console.h  canvas_pixmap.h
include/colproc/filter/: brigtness_scale.h  filter.h
include/colproc/mod/: concat.h  mixer.h  move.h
include/colproc/runtime/: ivariable_storage.h  lua_runtime.h  map_var_storage.h  runtime.h
include/colproc/switch/: switch.h  transition.h  transition_simple.h
include/colproc/util/: error.hpp
include/colproc/variable/: variable.h
main/: CMakeLists.txt  display_loop.cpp  display_loop.h  main.c  main.cpp
src/core/canvas/: canvas_strip.cpp
src/core/variable/: variable_declaration.h
src/lua/: CMakeLists.txt  bindings.cog  class_parser.py
src/mcufont/: CMakeLists.txt
src/mcufont/fonts/: convert_font.sh  fonts.h
src/runtime/: lua_runtime.cpp  map_var_storage.cpp  runtime.cpp
src/util/: error.cpp
util/: class_parser.py
