idf_component_register(
    SRCS    
        "mcufont/decoder/mf_encoding.c" 
        "mcufont/decoder/mf_font.c" 
        "mcufont/decoder/mf_justify.c" 
        "mcufont/decoder/mf_kerning.c" 
        "mcufont/decoder/mf_rlefont.c" 
        "mcufont/decoder/mf_bwfont.c" 
        "mcufont/decoder/mf_scaledfont.c" 
        "mcufont/decoder/mf_wordwrap.c"
    INCLUDE_DIRS 
        "mcufont/decoder/"
        "fonts/"
)